tests/ui/mismatched_types/closure-parameter-type-inference-mismatch.stderr
error[E0308]: mismatched types
  --> $DIR/closure-parameter-type-inference-mismatch.rs:15:22
   |
LL |         assert!(i == 3i32);
   |                 -    ^^^^ expected `u32`, found `i32`
   |                 |
   |                 expected because this is `u32`
   |
help: change the type of the numeric literal from `i32` to `u32`
   |
LL -         assert!(i == 3i32);
LL +         assert!(i == 3u32);
   |

error[E0308]: mismatched types
  --> $DIR/closure-parameter-type-inference-mismatch.rs:21:22
   |
LL |         assert!(i == 3u32);
   |                 -    ^^^^ expected `i32`, found `u32`
   |                 |
   |                 expected because this is `i32`
   |
help: change the type of the numeric literal from `u32` to `i32`
   |
LL -         assert!(i == 3u32);
LL +         assert!(i == 3i32);
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
